--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Frontend Mentor | Single Price Grid Component</title>
   </head>
   <body>
-    <div class="content">
+    <main class="content">
       <section class="card first">
         <div class="card-content">
           <h1>Join our community</h1>
@@ -37,6 +37,6 @@
             New videos every week</p>          
         </div>       
       </section>
-    </div>
+    </main>
   </body>
 </html>
